# nrl-predictor

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.py  config.yaml  pyproject.toml
.github/: scraper_ci_cd.yaml
.github/actions/create-gcp-env/: action.yaml
.github/workflows/: feature_eng.yaml  lint_test.yaml  scraper.yaml  scraper_ci_cd.yaml
feature_eng/: Dockerfile
feature_eng/feature_eng/: run.py
feature_eng/feature_eng/notebooks/: feat_eng_mvp.ipynb
feature_eng/feature_eng/sql/: features_team.sql  labels.sql  spine_team.sql  train.sql  win_loss_draw.sql  win_loss_draw_full.sql
feature_eng/tests/: docker_smoke_test.sh
make/: Makefile  cloud_run_job.mk  feature_eng.mk  features.mk  gcp.mk  gha.mk  run_local.mk  scraper.mk  setup.mk  test.mk
model/model/: train.py  train_eval.ipynb
model/model/notebooks/: train_eval.ipynb
scraper/: Dockerfile  Makefile
scraper/scraper/: nrl_data_scraper.py  run.py
scraper/scraper/notebooks/: feat_eng_mvp.ipynb  scrape_hist.ipynb  train_eval.ipynb
scraper/scraper/utilities/: scraper_functions.py  utils.py
scraper/src/: run.py
scraper/src/notebooks/: scrape_hist.ipynb
scraper/src/utilities/: get_nrl_data.py  scraper_functions.py  set_up_driver.py  utils.py
scraper/tests/: docker_smoke_test.sh  test_utils.py
scripts/: 1_create_service_acct.sh  1_create_service_accts.sh  2_create_data_buckets.sh  3_create_artifact_repo.sh  create_artifact_repo.sh
src/: .env  config.py  config.yaml  gcp.env  scraper-env.yaml  test.py
src/notebooks/: scrape_hist.ipynb  scraper.ipynb
src/scraping/: Dockerfile  run.py
src/scraping/utilities/: get_nrl_data.py  (+1 more)
src/scripts/: create_service_acct.sh  new_bucket.sh  schedule_scraper.sh
src/utilities/: gcs_client.py
utilities/: gcs_client.py  path_builder.py
(+6 files in other folders)
