[project]
name = "nrl-predictor"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "selenium (>=4.34.2,<5.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "google-cloud-storage (>=3.2.0,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "chromedriver-autoinstaller (>=0.6.4,<0.7.0)"
]

[tool.poetry]
packages = [
  {include = "scraper", from = "scraper"},
  {include = "utilities"},
  {include = "config.py"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.5"
jupyterlab = "^4.4.5"
ipykernel = "^6.30.0"
ipywidgets = "^8.1.7"
pre-commit = "^4.2.0"

[tool.ruff]
extend-exclude = ["*.ipynb"]
